<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".Settings"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="459dp"
        android:background="@drawable/settings_border"
        android:text="@string/notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="531dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacy_text"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="430dp"
        android:background="@drawable/settings_border"
        android:text="@string/privacy"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/privacy"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="429dp"
        android:backgroundTint="@color/darkGreen" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/settings_border"
        android:text="@string/about"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/about"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="403dp"
        android:backgroundTint="@color/darkGreen" />


</RelativeLayout>